<resources>
    <string name="app_name">Rai$ingMVP</string>
    <string name="navigation_matches"> Matches </string>
    <string name="navigation_leads"> Leads </string>
    <string name="navigation_profile"> Profile </string>
    <string name="navigation_settings"> Settings </string>
    <string name="register_text"> Register now </string>
    <string name="ok_text"> OK </string>
    <string name="yes_text"> Yes</string>
    <string name="cancel_text"> Cancel </string>
    <string name="remove_text"> Remove </string>
    <string name="add_text"> Add </string>
    <string name="edit_text"> Edit</string>
    <string name="accept_text"> Accept </string>
    <string name="accepted_text">Accepted</string>
    <string name="decline_text"> Decline </string>
    <string name="declined_text"> Declined </string>
    <string name="request_text"> Request </string>
    <string name="requested_text"> Requested </string>
    <string name="confirm_text"> Confirm </string>
    <string name="next_text"> Next</string>
    <string name="skip_text"> Skip</string>
    <string name="got_it_text"> Got it </string>
    <string name="search"> Search.. </string>
    <string name="currency"> CHF </string>
    <string name="continue_text"> Continue </string>
    <string name="save_text"> Save </string>
    <string name="submit_text"> Submit </string>
    <string name="register_button_text"> Continue </string>
    <string name="register_button_finish_text"> Finish </string>
    <string name="try_again_text"> Try again</string>
    <string name="simple_dialog_invalid_input_title">Invalid inputs</string>
    <string name="general_dialog_error_title"> Error occurred! </string>
    <string name="general_dialog_error_text"> Something went wrong. Please try again </string>
    <string name="server_error">Server Error</string>
    <string name="toolbar_title_onboarding"> How it works </string>
    <string name="onboarding_pre_1_text"> Get weekly matches of startups / investors that match your personal interests</string>
    <string name="onboarding_pre_2_text"> Read further information about matches and request them if you are interested</string>
    <string name="onboarding_pre_3_text"> Get contact information if the other party is interested as well \n  </string>
    <string name="onboarding_post_1_text"> Once a week you will get new matches. If you click on a match you can see more details</string>
    <string name="onboarding_post_2_title"> Details</string>
    <string name="onboarding_post_2_text"> After reading the details you can either request or decline the match \n</string>
    <string name="onboarding_post_3_text"> After you requested a match, the match becomes a lead. If the other party also accepted the match, you can get in touch</string>
    <string name="onboarding_post_4_text"> Request the other party for one of the provided interactions to receive their contact details</string>
    <string name="onboarding_post_6_title"> Good Luck!</string>
    <string name="toolbar_title_login"> Login </string>
    <string name="login_button_text"> Login </string>
    <string name="login_email"> E-Mail </string>
    <string name="login_password"> Password</string>
    <string name="login_forgot_button_text"> Forgot Password? </string>
    <string name="login_register_text"> No Account? </string>
    <string name="login_dialog_title"> Login failed </string>
    <string name="login_dialog_text_403"> Incorrect username or password </string>
    <string name="login_dialog_text_empty_credentials"> Please fill out all required fields </string>
    <string name="toolbar_title_forgot_email"> Forgot Password</string>
    <string name="toolbar_title_reset_password"> Reset Password </string>
    <string name="reset_password_success_title">Password reset</string>
    <string name="reset_password_success_text">Your password has successfully been reset. You can now log in with your new password.</string>
    <string name="toolbar_title_contact_details"> Complete your Profile </string>
    <string name="registration_information_dialog_title"> Additional Information</string>
    <string name="registration_information_dialog_description">Describe yourself in one sentence</string>
    <string name="registration_information_dialog_pitch">Write a pitch in less than 250 words </string>
    <string name="registration_information_dialog_uid">UID is a national identification number for all companies. If you do not know your UID click on ‘Find UID’.</string>
    <string name="registration_information_dialog_fte">FTE stands for Full Time Employees. Potential matches may be interested in your employment status.</string>
    <string name="registration_information_dialog_committed">Tell us if you have already achieved some of the target scope, that you have specified above.</string>
    <string name="registration_information_dialog_scope">With the scope you can define how much money you would like to raise during this current financing phase.</string>
    <string name="registration_information_label">A label is an award given to a startup upon completing a certain program or reaching predefined values \n(max. 3 Labels)</string>
    <string name="toolbar_title_login_information"> Login Information</string>
    <string name="register_first_name"> First Name* </string>
    <string name="register_last_name"> Last Name* </string>
    <string name="register_email"> E-Mail* </string>
    <string name="register_password"> Password* </string>
    <string name="register_dialog_cancel_registration_title"> Cancel Registration</string>
    <string name="register_dialog_cancel_registration_text"> You are about to cancel your registration. \nDo you want to proceed? </string>
    <string name="toolbar_title_account_type"> Type of Account </string>
    <string name="register_select_type_text"> Are you a startup or an investor? </string>
    <string name="register_select_investor_button"> Investor </string>
    <string name="register_select_startup_button"> Start Up</string>
    <string name="toolbar_title_profile_information"> Profile Information</string>
    <string name="register_profile_country"> Country* </string>
    <string name="register_profile_website"> Website </string>
    <string name="register_profile_company"> Company </string>
    <string name="register_profile_phone"> Phone Number* </string>
    <string name="toolbar_title_matching_criteria"> Matching Criteria</string>
    <string name="startup_matching_ticket_size_text">What preferred amounts of money should investors invest?</string>
    <string name="startup_matching_type_investor_text">What type of investor are you looking for?</string>
    <string name="startup_matching_phase_text">What stage of financing are you in?</string>
    <string name="startup_matching_industry_text">What industry are you in?</string>
    <string name="startup_matching_involvement_text">What kind of involvement do you desire from an investor?</string>
    <string name="investor_matching_ticket_size_text">What preferred amounts of money would you like to invest?</string>
    <string name="investor_matching_type_investor_text">What type of investor are you?</string>
    <string name="investor_matching_phase_text">What stage of financing are you interested in?</string>
    <string name="investor_matching_industry_text">What are your target industries?</string>
    <string name="investor_matching_involvement_text">What kind of involvement can you bring to startups?</string>
    <string name="investor_matching_geographics_text">Which are your preferred regions for startups?</string>
    <string name="register_matching_geographics">Select Geographics </string>
    <string name="toolbar_title_pitch"> Pitch </string>
    <string name="register_pitch_sentence"> Description* </string>
    <string name="register_sentence_helper_text"> Describe yourself in one sentence.</string>
    <string name="register_pitch"> Pitch* </string>
    <string name="register_pitch_helper_text"> Write a pitch in less than 250 words.</string>
    <string name="register_pitch_error_long_sentence"> One sentence should not exceed the given maximum length </string>
    <string name="register_pitch_error_long_pitch"> Pitch should not exceed the given maximum length</string>
    <string name="register_error_word_limit_overflow"> You have exceeded your word limit! </string>
    <string name="toolbar_title_profile_images"> Images </string>
    <string name="register_images_information_text"> Images </string>
    <string name="register_images_add_profile_text"> Add a profile picture* </string>
    <string name="register_images_add_gallery"> Add a picture to your gallery </string>
    <string name="image_action_dialog_title"> Select an Option </string>
    <string name="image_action_dialog_choose"> Choose from Gallery </string>
    <string name="image_action_dialog_take"> Take Picture </string>
    <string name="toolbar_title_company_information"> Company Information </string>
    <string name="register_company_name"> Company* </string>
    <string name="register_company_uid"> UID* </string>
    <string name="register_company_uid_helper">Pattern: CHE-XXX.XXX.XXX</string>
    <string name="register_company_phone"> Phone Number* </string>
    <string name="register_company_website"> Website </string>
    <string name="register_company_country"> Country* </string>
    <string name="register_uid_find"> Find UID </string>
    <string name="register_uid_link"> https://www.bfs.admin.ch/bfs/en/home/register/unternehmensregister/unternehmens-identifikationsnummer.html </string>
    <string name="toolbar_title_company_figures"> Facts and Figures </string>
    <string name="register_company_revenue"> Revenue* </string>
    <string name="register_company_breakeven"> Break-Even Year* </string>
    <string name="break_even_picker_title">Select Breakeven Year</string>
    <string name="register_company_fte"> Full Time Employees* </string>
    <string name="register_company_markets"> Current Markets* </string>
    <string name="register_company_founding_year"> Founding Year* </string>
    <string name="founding_picker_title">Select Founding Year</string>
    <string name="register_stakeholder_first_name"> First Name* </string>
    <string name="register_stakeholder_last_name"> Last Name* </string>
    <string name="register_stakeholder_position"> Position* </string>
    <string name="register_stakeholder_education"> Education* </string>
    <string name="leads_your_turn"> Your turn </string>
    <string name="leads_pending"> Pending </string>
    <string name="leads_closed"> Closed </string>
    <string name="settings_about_paragraph1">RAI$ING is a product of the Swiss Entrepreneurs Foundation (SwissEF). It builds on the need to make financing rounds more efficient for startups, SMEs and investors. Based on the registered profiles, suitable companies and investors are quickly networked.</string>
    <string name="settings_about_paragraph2">RAI$ING was developed in collaboration with Ubique Innovations AG and a team of Computer Science students from the University of Berne.</string>
    <string name="settings_about_sponsorship"> Sponsorship</string>
    <string name="settings_about_sponsorship_text"> Swiss Enterpreneurs Foundation \nBundesgasse 35 \n3001 Bern \ninfo@swissef.ch</string>
    <string name="settings_about_supervision"> Supervision</string>
    <string name="settings_about_supervision_text"> Ubique Innovations AG, Zürich</string>
    <string name="settings_about_management"> Project Management and Implementation</string>
    <string name="settings_about_management_text"> University of Bern, Computer Science \nNoah Schmid \nAdrian Jörg \nManuel Schüpbach \nOlivier Stähli \nLorenz Caliezi</string>
    <string name="contact_input_title">Complete your profile</string>
    <string name="contact_input_description">This looks like a new device. Please enter your mobile number to allow for an exchange of mobile numbers later on!</string>
</resources>