<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overlay_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.SettingsAboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView18"
                style="@style/RaisingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standardHorizontalMarginSmall"
                android:layout_marginTop="@dimen/standardVerticalMargin"
                android:layout_marginEnd="@dimen/standardHorizontalMarginSmall"
                android:layout_marginBottom="@dimen/standardVerticalMargin"
                android:hint="@string/settings_about_paragraph1"
                app:layout_constraintBottom_toTopOf="@+id/textView16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                style="@style/RaisingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/settings_about_paragraph2"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView6"
                style="@style/RaisingTextBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardVerticalMargin"
                android:hint="@string/settings_about_sponsorship"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView7"
                style="@style/RaisingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standardVerticalMargin"
                android:hint="@string/settings_about_sponsorship_text"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                style="@style/RaisingTextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/settings_about_supervision"
                app:layout_constraintBottom_toTopOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView17"
                style="@style/RaisingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/settings_about_supervision_text"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                style="@style/RaisingTextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardVerticalMargin"
                android:hint="@string/settings_about_management"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView12"
                style="@style/RaisingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/settings_about_management_text"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>


