<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_select_type_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.fragments.registration.RegisterSelectTypeFragment">

    <Button
        android:id="@+id/button_register_as_startup"
        android:layout_width="0dp"
        android:layout_height="@dimen/inputFormHeight"
        android:layout_marginStart="@dimen/inputFormHorizontalMargin"
        android:layout_marginEnd="@dimen/inputFormHorizontalMargin"
        android:layout_marginBottom="@dimen/inputFormVerticalMargin"

        android:hint="@string/register_select_startup_button"
        android:textSize="@dimen/buttonFontSize"
        android:textColorHint="@color/primaryButtonTextColor"

        app:layout_constraintBottom_toTopOf="@+id/button_register_as_investor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_register_as_investor"
        android:layout_width="0dp"
        android:layout_height="@dimen/inputFormHeight"

        android:hint="@string/register_select_investor_button"
        android:textSize="@dimen/buttonFontSize"
        android:textColorHint="@color/primaryButtonTextColor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_register_as_startup"
        app:layout_constraintStart_toStartOf="@+id/button_register_as_startup"
        app:layout_constraintTop_toBottomOf="@+id/button_register_as_startup" />

    <TextView
        android:id="@+id/text_select_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/register_select_type_text"
        android:textSize="@dimen/fragmentTextFontSize"
        android:textColorHint="@color/primaryTextColor"

        app:layout_constraintBottom_toTopOf="@+id/button_register_as_startup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>